Bugfix Pixelboard px height value forcing page overflow CSS height padding values added limits px value

--- a/project/src/index.css
+++ b/project/src/index.css
@@ -3,11 +3,6 @@
     margin: 0px;
 }
 
-body{
-    /* height: fit-content; */
-    height: 50%;
-}
-
 .flex-row{
     display: flex;
     justify-content: center;
@@ -37,10 +32,19 @@ body{
     transform: translateX(-50%);
 }
 
+#app-cont{
+    height: 100vh;
+}
+
+#main-content{
+    padding: 0% 10%;
+}
+
 #pixel-board {
     display: flex;
     flex-direction: column;
     width: 50%;
+    max-height: inherit;
 }
 
 .pixel {
